# supervis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms-full.txt  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
supervisor/: __init__.py  app.py  chat.py  claude.py  commands.py  config.py  cost.py  deepseek.py  display.py  events.py  logging_config.py  main.py  memory.py  orchestrator.py  prompts.py  queue.py  session.py  tools.py  version_check.py
supervisor/widgets/: __init__.py  input_bar.py  output_log.py  status_bar.py  stream_display.py
tests/: test_claude.py  test_config.py  test_cost.py  test_deepseek.py  test_input_bar.py  test_logging_config.py  test_memory.py  test_output_log.py  test_queue.py  test_session.py  test_tools.py  test_version_check.py
