[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supervis"
version = "0.1.0"
description = "DeepSeek supervisor for Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0.0",
]
keywords = ["claude", "deepseek", "ai", "coding", "agent", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/yourname/supervis"
Issues = "https://github.com/yourname/supervis/issues"

[project.scripts]
supervis = "supervisor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["supervisor*"]
