[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supervis"
version = "1.0.1"
description = "DeepSeek supervisor for Claude Code"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "arikusi", email = "t@tahirl.com" }]
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0.0",
    "textual>=0.89.0",
    "tomli>=1.0.0; python_version < '3.11'",
]
keywords = ["claude", "deepseek", "ai", "coding", "agent", "llm", "supervisor", "tui"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.21"]
dev = ["ruff>=0.4.0", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/arikusi/supervis"
Issues = "https://github.com/arikusi/supervis/issues"

[project.scripts]
supervis = "supervisor.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["supervisor*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"supervisor/prompts.py" = ["E501"]  # LLM prompt text, long lines intentional
"supervisor/tools.py" = ["E501"]    # Tool descriptions for LLM, long lines intentional
"tests/*.py" = ["SIM117"]          # Nested with statements are clearer in tests

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
